--- a/assignment-ps5.html
+++ b/assignment-ps5.html
@@ -383,21 +383,21 @@ nrow(population_data)</code></pre>
 <li>(2pt) Print a small sample of data. Does it look OK?</li>
 </ol>
 <pre class="r"><code>sample_n(population_data, 2)</code></pre>
-<pre><code>##   iso3       name iso2  region      sub.region intermediate.region time
-## 1  KIR   Kiribati   KI Oceania      Micronesia                     1973
-## 2  SMR San Marino   SM  Europe Southern Europe                     1997
-##   totalPopulation fertilityRate lifeExpectancy childMortality
-## 1           53553         5.034         53.633          129.0
-## 2           26562            NA             NA            7.7
-##   youthFemaleLiteracy youthMaleLiteracy adultLiteracy    GDP_PC
-## 1                  NA                NA            NA  3027.671
-## 2                  NA                NA            NA 53525.126
+<pre><code>##   iso3                     name iso2 region         sub.region
+## 1  CAF Central African Republic   CF Africa Sub-Saharan Africa
+## 2  YEM                    Yemen   YE   Asia       Western Asia
+##   intermediate.region time totalPopulation fertilityRate lifeExpectancy
+## 1       Middle Africa 2006         4118069         5.353         45.158
+## 2                     2007        21282515         5.090         64.470
+##   childMortality youthFemaleLiteracy youthMaleLiteracy adultLiteracy    GDP_PC
+## 1          160.4                  NA                NA            NA  428.9569
+## 2           64.5                  NA                NA            NA 1252.4831
 ##   accessElectricity agriculturalLand agricultureTractors cerealProduction
-## 1                NA              380                  13               NA
-## 2               100               10                  NA               NA
-##   fertilizerHa   co2 greenhouseGases  co2_PC pm2.5_35 battleDeaths
-## 1           NA 36.67              NA 0.68474       NA           NA
-## 2           NA    NA              NA      NA       NA           NA</code></pre>
+## 1           7.80517            52100                  NA           227000
+## 2          57.24647           236270                  NA          1028875
+##   fertilizerHa       co2 greenhouseGases  co2_PC pm2.5_35 battleDeaths
+## 1      0.22178   249.356       595439.93 0.06055       NA           46
+## 2     21.40659 20971.573        36225.62 0.98539       NA           NA</code></pre>
 <p>The data printed a little strangely, but that is likely due to how
 many columns there were.</p>
 <hr />
@@ -405,8 +405,68 @@ many columns there were.</p>
 <div id="descriptive-statistics-15pt" class="section level1">
 <h1>2 Descriptive statistics (15pt)</h1>
 <ol style="list-style-type: decimal">
-<li><p>(3pt) How many countries are there in the dataset? Analyze all
-three: <em>iso3</em>, <em>iso2</em> and <em>name</em>.</p></li>
+<li>(3pt) How many countries are there in the dataset? Analyze all
+three: <em>iso3</em>, <em>iso2</em> and <em>name</em>.</li>
+</ol>
+<pre class="r"><code>population_data %&gt;% 
+  group_by(name) %&gt;% 
+  summarise(n = n_distinct(name)) %&gt;% 
+  arrange(desc(n))</code></pre>
+<pre><code>## # A tibble: 250 × 2
+##    name                      n
+##    &lt;chr&gt;                 &lt;int&gt;
+##  1 &quot;&quot;                        1
+##  2 &quot;Afghanistan&quot;             1
+##  3 &quot;Albania&quot;                 1
+##  4 &quot;Algeria&quot;                 1
+##  5 &quot;American Samoa&quot;          1
+##  6 &quot;Andorra&quot;                 1
+##  7 &quot;Angola&quot;                  1
+##  8 &quot;Anguilla&quot;                1
+##  9 &quot;Antarctica&quot;              1
+## 10 &quot;Antigua and Barbuda&quot;     1
+## # … with 240 more rows</code></pre>
+<p>There are 250 unique country names.</p>
+<pre class="r"><code>population_data %&gt;% 
+  group_by(iso2) %&gt;% 
+  summarise(n = n_distinct(name)) %&gt;% 
+  arrange(desc(n))</code></pre>
+<pre><code>## # A tibble: 249 × 2
+##    iso2      n
+##    &lt;chr&gt; &lt;int&gt;
+##  1 &quot;&quot;        2
+##  2 &quot;AD&quot;      1
+##  3 &quot;AE&quot;      1
+##  4 &quot;AF&quot;      1
+##  5 &quot;AG&quot;      1
+##  6 &quot;AI&quot;      1
+##  7 &quot;AL&quot;      1
+##  8 &quot;AM&quot;      1
+##  9 &quot;AO&quot;      1
+## 10 &quot;AQ&quot;      1
+## # … with 239 more rows</code></pre>
+<p>There are 249 unique country iso2 codes, with two of them being
+<NA>.</p>
+<pre class="r"><code>population_data %&gt;% 
+  group_by(iso3) %&gt;% 
+  summarise(n = n_distinct(name)) %&gt;% 
+  arrange(desc(n))</code></pre>
+<pre><code>## # A tibble: 253 × 2
+##    iso3      n
+##    &lt;chr&gt; &lt;int&gt;
+##  1 ABW       1
+##  2 AFG       1
+##  3 AGO       1
+##  4 AIA       1
+##  5 ALA       1
+##  6 ALB       1
+##  7 AND       1
+##  8 ARE       1
+##  9 ARG       1
+## 10 ARM       1
+## # … with 243 more rows</code></pre>
+<p>There are 253 unique iso3 codes.</p>
+<ol start="2" style="list-style-type: decimal">
 <li><p>If you did this correctly, you saw that there are more iso-2
 codes than names, and there are even more <em>iso3</em>-codes. What is
 going on? Can you find it out?</p>
